<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/prvi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/filter_price"
        android:textSize="22sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/priceValue"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textSize="22sp"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/priceFilter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:progress="3750"
        android:max="7500"
        android:layout_below="@+id/prvi"/>

    <LinearLayout
        android:id="@+id/drugi"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@+id/priceFilter">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/filter_area"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/areaValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="22sp"/>

    </LinearLayout>

    <SeekBar
        android:id="@+id/areaFilter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:progress="150"
        android:max="300"
        android:layout_below="@+id/drugi"/>

    <TextView
        android:id="@+id/roomsText"
        android:text="@string/rooms_filter"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:textSize="22sp"
        android:layout_below="@id/areaFilter"/>

    <LinearLayout
        android:id="@+id/treci"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_below="@+id/roomsText">

        <Button
            android:id="@+id/lessRoomsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/minus_button"
            android:textSize="22sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/roomsValue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="22sp"/>

        <Button
            android:id="@+id/moreRoomsButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/plus_button"
            android:textSize="22sp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="searchByFilters"
        android:text="@string/search_button"/>

</RelativeLayout>