<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/natural"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
            android:background="@drawable/background">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/ic_profile"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                app:civ_border_width="2dp"
                app:civ_border_color="#cccccc"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="30dp"
                android:letterSpacing="0.025"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">



            <TextView
                android:layout_weight="5"
                android:id="@+id/emailTextView"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_text"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="start"/>


            <EditText
                android:layout_weight="2"
                android:id="@+id/emailEditText"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#181737"
                android:background="#0000"
                android:padding="16dp"
                android:hint="@string/email_missing_hint"
                android:gravity="end"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">



            <TextView
                android:layout_weight="5"
                android:id="@+id/phoneTextView"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_text"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="start"/>


            <EditText
                android:layout_weight="2"
                android:id="@+id/phoneEditText"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#181737"
                android:background="#0000"
                android:padding="16dp"
                android:hint="@string/phone_missing_hint"
                android:gravity="end" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">



            <TextView
                android:layout_weight="5"
                android:id="@+id/locationTextView"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_text"
                android:textColor="#a2a1b8"
                android:maxLength="12"
                android:background="#0000"
                android:padding="16dp"
                android:gravity="start"/>


            <EditText
                android:layout_weight="2"
                android:id="@+id/locationEditText"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#181737"
                android:background="#0000"
                android:padding="16dp"
                android:hint="@string/location_missing_hint"
                android:gravity="end"
                android:inputType="textPostalAddress" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dad8d8"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:text="Save" />

        <Button
            android:id="@+id/button2"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Logout"
            android:onClick="logout"/>


    </LinearLayout>
</ScrollView>